fixed footer spacing problems

--- a/styles.css
+++ b/styles.css
@@ -102,7 +102,26 @@ a{
 }
 
 #language-selector{
-    /*background-color: #E75A2F;*/
+    background-color: #E75A2F;
+    padding: 5px;
+    border: none;
+    border-radius: 5px;
+}
+
+#language-selector.decorated option:hover{
+    background-color: red;
+    color: red;
+    outline: none;
+}
+
+.lang-option{
+    padding: 5px;
+}
+
+.lang-option:focus{
+    background-color: red;
+    color: #1f2e41;
+    outline: none;
 }
 
 #introduction{
@@ -354,7 +373,7 @@ a{
 }
 
 #contact{
-    height: 80vh;
+    height: 90vh;
     max-width: 1124px;
     margin: auto;
     color: #ffffff;
@@ -386,10 +405,14 @@ a{
 
 .formDetails{
     height: 60px;
+    border-radius: 5px;
+    padding: 5px;
 }
 
 #message{
     height: 130px;
+    border-radius: 5px;
+    padding: 5px;
 }
 
 textarea {
@@ -406,12 +429,13 @@ textarea {
     font-weight: bold;
     font-size: 1rem;
     margin: 20px;
+    cursor: pointer;
 }
 
 #footer{
     max-width: 1124px;
     margin: auto;
-    height: 20vh;
+    height: 10vh;
     color: #ffffff;
     display: flex;
     flex-direction: row;
